[gd_scene load_steps=12 format=2]

[ext_resource path="res://Entities/player/item_thinkers/sword/sword_thinker.gd" type="Script" id=1]
[ext_resource path="res://UI/cursors/cursor_sword.png" type="Texture" id=2]
[ext_resource path="res://Entities/Attacks/Melee/slash/sword_equip.wav" type="AudioStream" id=3]
[ext_resource path="res://Components/sound_player/sound_player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Item_Pickups/sword/sword.png" type="Texture" id=5]
[ext_resource path="res://Entities/player/item_thinkers/sword/counter_ready.wav" type="AudioStream" id=6]
[ext_resource path="res://Components/sound_player/sound/sound.tscn" type="PackedScene" id=7]
[ext_resource path="res://Entities/player/item_thinkers/sword/counter_success.wav" type="AudioStream" id=8]
[ext_resource path="res://Entities/Attacks/Melee/slash/slash.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0

[sub_resource type="Animation" id=2]
resource_name = "counter"
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_counter_window"
}, {
"args": [ false ],
"method": "set_counter_window"
} ]
}

[node name="sword_thinker" type="Node"]
script = ExtResource( 1 )
HELD_ITEM_TEXTURE = ExtResource( 5 )
HELD_ITEM_OFFSET = Vector2( 0, -4 )
my_item = "sword"
display_name = "sword"
CURSOR = ExtResource( 2 )
CURSOR_MODE = 1
EQUIP_SOUND = ExtResource( 3 )
counter_slowness_lvl = 3.0
counter_range = 32.0
SLASH = ExtResource( 9 )

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="sound_player" parent="." instance=ExtResource( 4 )]

[node name="counter_ready" parent="sound_player" instance=ExtResource( 7 )]
stream = ExtResource( 6 )
volume_db = 16.0
bus = "Master"
MODE = 1
AUTO_PLAY = false

[node name="counter_success" parent="sound_player" instance=ExtResource( 7 )]
stream = ExtResource( 8 )
bus = "Master"
MODE = 1
AUTO_PLAY = false

[node name="counter" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="counter"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/counter = SubResource( 2 )

[connection signal="area_entered" from="counter" to="." method="_on_counter_area_entered"]
